# jubilant-octo-parakeet

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  justfile  pyproject.toml  template.env
app/: .editorconfig  github_api.py  github_fetcher.py  main.py  settings.py  starneighbours_finder.py  utils.py
app/routers/: rotten.py  starneighbours.py
docs/: github.md
static/: index.html  style.css
tests/: test_dummy.py  test_github_fetcher_aioresponses.py  test_github_fetcher_coverage.py  test_starneighbours_finder.py
tests/bruno/stargazer/: bruno.json  fetcher.bru  fetcher_stared.bru  get starneighbours.bru  info.bru
tests/bruno/stargazer/environments/: dev.bru
tests/bruno/stargazer/github/: folder.bru  list repo stared by a user.bru  list stargazers of repo.bru  my stared repositories.bru  ratelimit.bru  repo_stars.bru  stared with ownerurl.bru  stared.bru  stargazers.bru  stargazers_graphql-next.bru  stargazers_graphql.bru
tests/bruno/stargazer/helpers/: folder.bru  get starneighbours copy.bru  repo stars.bru
