[project]
name = "stargazer"
version = "0.1.0"
description = "stargazer demo project"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "WTFPL"}
authors = [
    {name = "Adrien PRÉ", email = "adrien.pre+stargazer@gmail.com"}
]



[project.urls]
"Homepage" = "https://github.com/apre/stargazer"
"Bug Tracker" = "https://github.com/apre/stargazer/issues"

[tool.black]
line-length = 100
target-version = [ "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:aioresponses.core",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
